added page numbers to viniver quote

--- a/index.org
+++ b/index.org
@@ -348,10 +348,7 @@ subject-matter ostensibly belongs, but to use this
 subject-matter as a means of conveying a coherent system of
 ideas. 
 
-
-
-
-
+pg lxxiv-lxxix
 
 /The Works of Sir Thomas Malory/. Ed. Vinaver, Eugène
 (1967). 2nd ed. 3 vol. Oxford: Clarendon Press. [[https://en.wikipedia.org/wiki/Special:BookSources/0198118384][ISBN 0-19-811838-4]].
