--- a/prim-name-conventions.org
+++ b/prim-name-conventions.org
@@ -84,14 +84,50 @@ the other way around.
 
 
 #+begin_quote
-If you don't know what a thing should be called, you cannot know what
-it is.  If you don't know what it is, you cannot sit down and write
-the code."
+I overheard some people deciding that they need more layers in their
+architecture. They were right, as it happens; but going about it a
+little backwards. They were attempting to create a framework that
+would contain the business logic. Rather than solving some specific
+problems they started with the idea that they want a framework that
+wraps the database up and produces objects. And it should use
+object-relational mapping. And messages. And web services. And it
+should do all sorts of cool stuff.
 
--- Sam Gardiner 
+Unfortunately, since they didn't exactly know what cool stuff it would
+do, they didn’t know what to call it. So they held a little
+competition to suggest a name. And that is the point at which you must
+recognise that you have a problem: if you don’t know what a thing
+should be called, you cannot know what it is. If you don’t know what
+it is, you cannot sit down and write the code.
+
+In this particular case, a quick browse throught the source control
+history revealed the depth of the problem. Of course, there were lots
+of empty interface "implementations"! And the really funny thing is
+that they had already changed the names three times with no actual
+code. When they started they called it ClientAPI -- the “client”
+refers to the customers of the business, not client as in
+“client-server”-- and the final version was called
+ClientBusinessObjects. Great name: vague, broad and misleading.
+
+Of course, in the end, a name is just a pointer. Once everyone
+involved knows that the name is just a name and not a design metaphor
+then you can all move on. However, if you can't agree on a name that
+is specific enough for you to know when it is wrong, then you might
+have some difficulty even getting started. Design is all about trying
+to fulfil intentions -- e.g., fast, cheap, flexible -- and names
+convey intentions.
+
+If you can’t name it, you can’t write it. If you change the name 3
+times, then you should stop until you know what you are trying to
+build.
+
+ By Sam Gardiner 
+ This work is licensed under a Creative Commons Attribution 3 
+
+
+-- Sam Gardiner |
+   [[http://97things.oreilly.com/wiki/index.php/A_rose_by_any_other_name_will_end_up_as_a_cabbage][A rose by any other name will end up as a cabbage - Softarch 97Things]]
 #+end_quote
-
-
 
 
 
@@ -102,8 +138,15 @@ Naming conventions are not to be taken lightly
 - [[http://stackoverflow.com/questions/33497879/why-is-the-hardest-part-of-programming-is-naming-things][Why is the hardest part of programming is naming things?]] | Stack Overflow
 - [[http://www.slideshare.net/pirhilton/how-to-name-things-the-hardest-problem-in-programming][How to name things: the hardest problem in programming]] Peter
   Hilton | Slideshare
+- [[http://wiki.c2.com/?MeaningfulName][Meaningful Name]]
 * Wikipedia Naming Conventions
 
   - [[https://en.wikipedia.org/wiki/Wikipedia:Article_titles][Wikipedia:Article titles]] | Wikipedia
 
 
+* MARC
+
+  - [[http://www.loc.gov/marc/naming.html][Naming Conventions for Digital Resources]] 
+  - [[https://www.loc.gov/marc/bibliographic/bdx00.html][Format for Bibliographic Data |]] MARC
+  - [[https://www.loc.gov/marc/authority/adx00.html][Format for Authority Data]] | MARC
+  - [[https://www.loc.gov/marc/bibliographic/bd100.html][Main Entry-Personal Name]] | MARC
