--- a/prim-name-conventions.org
+++ b/prim-name-conventions.org
@@ -64,7 +64,6 @@ the other way around.
 ... the worst thing one can do with words is surrender to them.
 
 
-
   - i.   Never use a metaphor, simile, or other figure of speech which
          you are used to seeing in print.
   - ii.  Never use a long word where a short one will do.
@@ -74,8 +73,6 @@ the other way around.
          word if you can think of an everyday English equivalent.
   - vi.  Break any of these rules sooner than say anything outright
          barbarous.
-
-
 
 -- George Orwell | Politics and the English Language
    [[http://wikilivres.ca/wiki/Politics_and_the_English_Language][Politics and the English Language]] | Wikilivres
@@ -136,13 +133,47 @@ Naming conventions are not to be taken lightly
 ---
 
 - [[http://stackoverflow.com/questions/33497879/why-is-the-hardest-part-of-programming-is-naming-things][Why is the hardest part of programming is naming things?]] | Stack Overflow
+- [[http://wiki.c2.com/?MeaningfulName][Meaningful Name]]
 - [[http://www.slideshare.net/pirhilton/how-to-name-things-the-hardest-problem-in-programming][How to name things: the hardest problem in programming]] Peter
   Hilton | Slideshare
-- [[http://wiki.c2.com/?MeaningfulName][Meaningful Name]]
+- [[http://hilton.org.uk/presentations/naming][How to name things]] Peter Hilton]
+- [[https://news.ycombinator.com/item?id=9598527][How to name things in programming]] | Hacker News Comment Thread
+
+
+* Names and Magic
+
+Naming is perhaps /the/ single most /human/ activity we as a species
+do.
+
+The names we give things have long been thought to have power over
+what is named
+
+It's still not uncomon in Jamacia for people to only give out
+nicknames for each other, because knowledge of a persons real name
+gives others, who practice the dark arts, to bring them to harm.
+
+   - /look up essay on guy trying to write Bunny Wailer's Bio/
+
+* Mythology
+
+  - Tutonic Mythology
+  - Golden Bough
+  - Joseph Campbell
+  - Tolkien
+
+ - [[bib:cassirer:2012language][Language and Myth]] | Ernst Cassirer
+
+
 * Wikipedia Naming Conventions
 
   - [[https://en.wikipedia.org/wiki/Wikipedia:Article_titles][Wikipedia:Article titles]] | Wikipedia
-
+  - [[https://en.wikipedia.org/wiki/Wikipedia:Manual_of_Style#Article_titles][Wikipedia:Manual of Style § Article titles]] 
+  - [[https://en.wikipedia.org/wiki/Wikipedia:Naming_conventions_(technical_restrictions)][Wikipedia:Naming conventions (technical restrictions)]]
+  - [[https://en.wikipedia.org/wiki/Wikipedia:Manual_of_Style/Trademarks][Wikipedia:Manual of Style/Trademarks]] 
+  - [[https://en.wikipedia.org/wiki/Wikipedia:Lead_section#Alternative_names][Wikipedia:Lead section § Alternative names]] 
+  - [[https://en.wikipedia.org/wiki/Wikipedia:Manual_of_Style#National_varieties_of_English][Wikipedia:Manual of Style, National varieties of English]] 
+  - [[https://en.wikipedia.org/wiki/Wikipedia:Neutral_point_of_view#Naming][Wikipedia:Neutral point of view § Naming]]
+  - [[https://en.wikipedia.org/wiki/Wikipedia:Official_names][Wikipedia:Official names]] | essay
 
 * MARC
 
@@ -150,3 +181,7 @@ Naming conventions are not to be taken lightly
   - [[https://www.loc.gov/marc/bibliographic/bdx00.html][Format for Bibliographic Data |]] MARC
   - [[https://www.loc.gov/marc/authority/adx00.html][Format for Authority Data]] | MARC
   - [[https://www.loc.gov/marc/bibliographic/bd100.html][Main Entry-Personal Name]] | MARC
+
+* Scientific Naming
+
+  - [[http://www.nationalgeographic.org/activity/how-scientists-name-things/][How Scientists Name Things]] | National Geographic Society
